--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,14 +15,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
+      - name: Verify PHP syntax
+        run: |
+          echo "🔍 Checking PHP syntax..."
+          find . -name "*.php" -not -path "./vendor/*" -exec php -l {} \; | grep -v "No syntax errors"
+          echo "✅ PHP syntax check passed"
 
-      - name: Install dependencies
-        run: npm ci --production=false
-
-      - name: Run build
-        run: npm run build
+      - name: List PHP files
+        run: |
+          echo "📁 PHP files in project:"
+          ls -la *.php | head -10
