--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,19 +9,40 @@ on:
       - main
 
 jobs:
-  build:
+  validate:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          tools: composer
+
       - name: Verify PHP syntax
         run: |
-          echo "🔍 Checking PHP syntax..."
-          find . -name "*.php" -not -path "./vendor/*" -exec php -l {} \; | grep -v "No syntax errors"
+          echo "🔍 Checking PHP syntax for all files..."
+          find . -name "*.php" -not -path "./vendor/*" -not -path "./node_modules/*" | while read file; do
+            php -l "$file" || exit 1
+          done
           echo "✅ PHP syntax check passed"
 
       - name: List PHP files
         run: |
           echo "📁 PHP files in project:"
-          ls -la *.php | head -10
+          find . -name "*.php" -not -path "./vendor/*" -not -path "./node_modules/*" | head -20
+
+      - name: Check composer.json (if exists)
+        run: |
+          if [ -f "composer.json" ]; then
+            echo "📦 Found composer.json"
+            cat composer.json | head -20
+          else
+            echo "ℹ️  No composer.json found (plain PHP project)"
+          fi
+
+      - name: Validate success
+        run: echo "✅ All validation checks passed!"
+
