--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,31 @@ jobs:
           ls -la *.php 2>/dev/null | head -10 || echo "No PHP files in root"
           find . -name "*.php" -not -path "./vendor/*" | head -10
 
+      - name: Create deployment archive
+        run: |
+          echo "📦 Creating deployment archive..."
+          tar -czf /tmp/deploy.tar.gz \
+            --exclude='.git' \
+            --exclude='.devops' \
+            --exclude='.github' \
+            --exclude='node_modules' \
+            --exclude='vendor' \
+            --exclude='.gitignore' \
+            --exclude='.env' \
+            --exclude='*.md' \
+            .
+          echo "✅ Archive created"
+
+      - name: Upload archive to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_SSH_KEY }}
+          port: ${{ secrets.DEPLOY_PORT || 22 }}
+          source: "/tmp/deploy.tar.gz"
+          target: "/tmp/"
+
       - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -30,23 +55,13 @@ jobs:
           script: |
             set -e
 
-            REPO_PATH="/Volumes/DatenAP/Code/admin.arkturian.com"
             DEPLOY_PATH="/var/www/admin.arkturian.com"
             BACKUP_DIR="/var/backups"
             BACKUP_PREFIX="admin-panel"
             TIMESTAMP=$(date +%Y%m%d-%H%M%S)
             BACKUP_PATH="$BACKUP_DIR/${BACKUP_PREFIX}-${TIMESTAMP}"
 
-            echo "📂 Repository: $REPO_PATH"
             echo "🎯 Deploy to: $DEPLOY_PATH"
-
-            cd "$REPO_PATH"
-
-            echo "🔄 Fetching latest code..."
-            git fetch origin main
-            git reset --hard origin/main
-
-            echo "✅ PHP project - no dependencies to install"
 
             if [ -d "$DEPLOY_PATH" ]; then
               echo "💾 Creating backup..."
@@ -57,16 +72,10 @@ jobs:
 
             echo "🚀 Deploying PHP files..."
             mkdir -p "$DEPLOY_PATH"
-            rsync -av --delete \
-              --exclude='.git' \
-              --exclude='.devops' \
-              --exclude='.github' \
-              --exclude='node_modules' \
-              --exclude='vendor' \
-              --exclude='.gitignore' \
-              --exclude='.env' \
-              --exclude='*.md' \
-              "$REPO_PATH/" "$DEPLOY_PATH/"
+            
+            # Extract archive directly to deploy path
+            tar -xzf /tmp/deploy.tar.gz -C "$DEPLOY_PATH"
+            rm /tmp/deploy.tar.gz
 
             echo "🔒 Setting permissions..."
             chown -R www-data:www-data "$DEPLOY_PATH"
